# rusindo

./: Cargo.toml  LICENSE  README.md  build.rs
examples/jwt/: Cargo.toml
examples/jwt/config/: services.toml
examples/jwt/src/: main.rs  settings.rs
examples/mongodb/: .env  Cargo.toml
examples/mongodb/config/: db.toml
examples/mongodb/keys/: cert.pem  client.crt  client.csr  client.key  key.pem  root.crt  root.key  root.srl
examples/mongodb/src/: main.rs  settings.rs
examples/rpc/: Cargo.toml
examples/rpc/src/: main.rs
proto/: root.proto
src/: error.rs  lib.rs
src/database/: mod.rs  mongo.rs  mongodb.rs
src/network/: mod.rs
src/network/grpc/: mod.rs  route.rs  server.rs
src/network/web/: server.rs
src/services/: jwt.rs
src/utility/: jwt.rs
