[package]
name = "rusindo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "8"
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
config = "0.13"
mongodb = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
derive_more = "0.99.0"
thiserror = "1"
lazy_static = "1"
reqwest = "0.11"
actix-web = { version = "4", features = ["openssl"]}
actix-cors = "0.6"
openssl = { version = "0.10" }
tonic = "0.8"
prost = "0.11"
rand = "0.8"

tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"

[features]
database = []
jwt = []
mongodb = []

[build-dependencies]
tonic-build = "0.8"