[package]
name = "rusindo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
env_logger = "0.10.1"
log = "0.4.20"
jsonwebtoken = "9.2.0"
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
config = "0.13.4"
mongodb = "2.7.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
derive_more = "0.99.0"
thiserror = "1"
lazy_static = "1"
reqwest = "0.11"
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.6.5"
openssl = { version = "0.10" }
tonic = "0.10.2"
prost = "0.12.3"
rand = "0.8.5"

tokio = { version = "1.27", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1.14"
async-stream = "0.3.5"

[features]
# database = []
jwt = []
mongo = []

[build-dependencies]
tonic-build = "0.10"
