[package]
name = "mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.27.0"
rusindo = { path = "../../", version = "0.1.0", features = ["mongodb"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
actix-web = { version = "4", features = ["openssl"]}
env_logger = "0.10"
dotenv = "0.15"